# seaglider-navigation

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Jenkinsfile  LICENSE.md  README.md  asv.conf.json  live_figures.py  publish_figures.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: github-actions.yml
adcp/: __init__.py  dataprep.py  matbuilder.py  optimization.py  simulation.py  testme.py  viz.py
adcp/exp/: __init__.py  _trial_types.py  psearch.py  psearch2d.py
adcp/exp/live_trials/: __init__.py  __main__.py
adcp/exp/psearch2d_trials/: .gitignore  __init__.py  __main__.py  trial1.py  trial10.py  trial10b.py  trial10c.py  trial11.py  trial11b.py  trial11c.py  trial12.py  trial12c.py  trial12d.py  trial12e.py  trial13.py  trial13c.py  trial14.py  trial14c.py  trial15.py  trial15c.py  trial16.py  trial16c.py  trial16d.py  trial16e.py  trial17.py  trial17c.py  trial17d.py  trial17e.py  trial1b.py  trial1c.py  trial2.py  trial21a.py  trial21c.py  trial2b.py  trial2c.py  trial2d.py  trial2e.py  trial3.py  trial3b.py  trial3c.py  (+20 more)
adcp/exp/tests/: test_trials.py
adcp/tests/: conftest.py  test_dataprep.py  test_init.py  test_integration.py  test_matbuilder.py  test_optimization.py  test_simulation.py
benchmarks/: benchmarks.py
data/: .gitignore
notebooks/: .gitignore  example.ipynb
test/: data_test.py  debugme.py  integration_test.py  parameter_search1d.py  parameter_search2d.py  sim_test.py  test.py  validate_test.py
