[build-system]
requires = ["setuptools", "wheel"]

[tool.coverage.run]
source = ["adcp"]
omit = [
    "*/__init__.py",
    "*/tests/*",
    "adcp/exp/psearch2d_trials/*"
]

[tool.black]
line-length = 79
preview = 1
exclude = '''
(
  adcp-env |
  .ipynb
)
'''

[tool.pytest.ini_options]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]
addopts = "-m \"not slow\""
testpaths = [
  "adcp/",
]
